--- a/phpBB/web.config
+++ b/phpBB/web.config
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
 	<system.webServer>
-		<rewrite>
-			<rules>
-				<rule name="phpBB config.php Rule" patternSyntax="Wildcard" stopProcessing="true">
-					<match url="*config.php" />
-					<action type="AbortRequest" />
-				</rule>
-				<rule name="phpBB common.php Rule" patternSyntax="Wildcard" stopProcessing="true">
-					<match url="*common.php" />
-					<action type="AbortRequest" />
-				</rule>
-			</rules>
-		</rewrite>
+		<security>
+			<requestFiltering>
+				<hiddenSegments>
+					<add segment="cache" />
+					<add segment="files" />
+					<add segment="store" />­
+				</hiddenSegments>
+			</requestFiltering>
+		</security>
 	</system.webServer>
+	<location path="images/avatars">
+		<system.webServer>
+			<security>
+				<requestFiltering>
+					<hiddenSegments>
+						<add segment="upload" />
+					</hiddenSegments>
+				</requestFiltering>
+			</security>
+		</system.webServer>
+	</location>
 </configuration>
