[ticket/9520] Additionally filter requests for {common,config}.php
PHPBB3-9520

--- a/phpBB/web.config
+++ b/phpBB/web.config
@@ -7,6 +7,8 @@
 					<add segment="cache" />
 					<add segment="files" />
 					<add segment="store" />­
+					<add segment="config.php" />
+					<add segment="common.php" />
 				</hiddenSegments>
 			</requestFiltering>
 		</security>
