--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *~
 phpBB/cache/*.php
 phpBB/config.php
+phpBB/files/*
+phpBB/images/avatars/upload/*
+phpBB/store/*
 tests/phpbb_unit_tests.sqlite2
 tests/test_config.php
