--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
 >
     <testsuites>
         <testsuite name="phpBB Test Suite">
-            <directory suffix=".php">./tests/</directory>
+            <directory suffix="_test.php">./tests/</directory>
         </testsuite>
     </testsuites>
     
