--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ phpunit.xml
 phpBB/cache/*.php
 phpBB/config.php
 phpBB/files/*
+phpBB/images/avatars/gallery/*
 phpBB/images/avatars/upload/*
 phpBB/store/*
 tests/phpbb_unit_tests.sqlite2
