--- a/phpBB/styles/prosilver/theme/theme.cfg
+++ b/phpBB/styles/prosilver/theme/theme.cfg
@@ -3,7 +3,7 @@
 #
 # @package phpBB3
 # @copyright (c) 2006 phpBB Group
-# @license http://opensource.org/licenses/gpl-license.php GNU Public License
+# @license http://opensource.org/licenses/gpl-2.0.php GNU General Public License v2
 #
 #
 # At the left is the name, please do not change this
