[ticket/10697] Updating gitignore to match develop branch
PHPBB3-10697

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *~
 /phpunit.xml
+/phpBB/cache/*.html
 /phpBB/cache/*.php
 /phpBB/cache/queue.php.lock
 /phpBB/config.php
+/phpBB/ext/*
 /phpBB/files/*
 /phpBB/images/avatars/gallery/*
 /phpBB/images/avatars/upload/*
