--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /phpBB/images/avatars/gallery/*
 /phpBB/images/avatars/upload/*
 /phpBB/store/*
+/phpBB/vendor
 /tests/phpbb_unit_tests.sqlite2
 /tests/test_config.php
 /tests/tmp/*
