[task/travis] Fixing some travis issues
PHPBB3-10718

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ notifications:
   email:
     recipients:
       - dev-team@phpbb.com
-    on_success: never
+    on_success: change
     on_failure: change
 
 branches:
