[task/travis] Rename travis phpunit config files
PHPBB3-10718

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - phpenv rehash
 
 script:
-  - phpunit --configuration travis/$DB.travis.xml
+  - phpunit --configuration travis/phpunit-$DB-travis.xml
 
 notifications:
   email:
