--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_script:
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'create database IF NOT EXISTS phpbb_tests;'; fi"
   - sh -c "if [ '$TRAVIS_PHP_VERSION' = '5.2' ]; then pear install --force phpunit/DbUnit; else pyrus install --force phpunit/DbUnit; fi"
   - phpenv rehash
+  - curl -s http://getcomposer.org/installer | php
+  - php composer.phar install
 
 script:
   - phpunit --configuration travis/phpunit-$DB-travis.xml
