[ticket/10732] Add config_dev.php and config_test.php to .gitignore
PHPBB3-10732

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /phpBB/cache/*.php
 /phpBB/cache/queue.php.lock
 /phpBB/config.php
+/phpBB/config_dev.php
+/phpBB/config_test.php
 /phpBB/ext/*
 /phpBB/files/*
 /phpBB/images/avatars/gallery/*
