--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
 env:
   - DB=mysql
   - DB=postgres
+  - DB=sqlite3
 
 before_script:
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS phpbb_tests;' -U postgres; fi"
@@ -23,3 +24,4 @@ notifications:
       - dev-team@phpbb.com
     on_success: change
     on_failure: change
+
