--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /phpBB/cache/*.html
 /phpBB/cache/*.php
 /phpBB/cache/queue.php.lock
+/phpBB/composer.phar
 /phpBB/config.php
 /phpBB/config_dev.php
 /phpBB/config_test.php
