--- a/phpBB/composer.json
+++ b/phpBB/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
-        "symfony/event-dispatcher": "2.0.*"
+        "symfony/config": "2.0.*",
+        "symfony/dependency-injection": "2.0.*",
+        "symfony/event-dispatcher": "2.0.*",
+        "symfony/yaml": "2.0.*"
     }
 }
