[feature/dic] Remove cache factory, now handled by DIC
PHPBB3-10739

--- a/phpBB/config/parameters.yml
+++ b/phpBB/config/parameters.yml
@@ -1,6 +1,6 @@
 parameters:
-    cache.acm_type: file
-    dbal.driver: dbal_mysqli
+    cache.driver.class: phpbb_cache_driver_file
+    dbal.driver.class: dbal_mysqli
     dbal.dbhost:
     dbal.dbuser: root
     dbal.dbpasswd:
